--- a/app/src/main/res/layout/dialog_more_class.xml
+++ b/app/src/main/res/layout/dialog_more_class.xml
@@ -1,204 +1,220 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="300dp"
-    android:layout_height="wrap_content"
-    android:layout_gravity="center"
-    android:background="@color/colortvLogo1"
-    android:orientation="vertical"
-    android:padding="@dimen/d_16">
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
-    <TextView
-        android:layout_width="wrap_content"
+
+    <ProgressBar
+        android:id="@+id/progress_bar_morelass"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:layout_centerInParent="true"
+        android:backgroundTint="@color/colorblue"
+        android:visibility="gone" />
+
+    <LinearLayout
+        android:layout_width="300dp"
         android:layout_height="wrap_content"
-        android:text="More Class"
-        android:textColor="@color/colorBlack"
-        android:textSize="@dimen/d_30"
-        android:textStyle="bold" />
-
-    <TableRow
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/d_20"
-        android:background="@color/colorWhite">
-
-
-        <EditText
-            android:id="@+id/edt_className"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:gravity="center"
-            android:hint="ClassName"
-            android:textColor="@color/colorBlack"
-            android:textSize="@dimen/d_15">
-
-            <requestFocus />
-        </EditText>
-    </TableRow>
-
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="2dp" />
-
-    <TableRow
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/colorWhite">
-
-        <EditText
-            android:id="@+id/edt_classCode"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:gravity="center"
-            android:hint="ClassCode"
-            android:textColor="@color/colorBlack"
-            android:textSize="@dimen/d_15">
-
-            <requestFocus />
-        </EditText>
-    </TableRow>
-
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="2dp" />
-
-    <TableRow
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/colorWhite">
-
-
-        <EditText
-            android:id="@+id/edt_coach"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:gravity="center"
-            android:hint="coach"
-            android:textColor="@color/colorBlack"
-            android:textSize="@dimen/d_15">
-
-            <requestFocus />
-        </EditText>
-    </TableRow>
-
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="2dp" />
-
-    <TableRow
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/colorWhite">
-
-        <EditText
-            android:id="@+id/edt_description"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:gravity="center"
-            android:hint="description"
-            android:textColor="@color/colorBlack"
-            android:textSize="@dimen/d_15">
-
-            <requestFocus />
-        </EditText>
-    </TableRow>
-
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="2dp" />
-
-    <TableRow
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/colorWhite">
-
-
-        <EditText
-            android:id="@+id/edt_duration"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:gravity="center"
-            android:hint="duration"
-            android:textColor="@color/colorBlack"
-            android:textSize="@dimen/d_15">
-
-            <requestFocus />
-        </EditText>
-    </TableRow>
-
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="2dp" />
-
-    <TableRow
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/colorWhite">
-
-        <EditText
-            android:id="@+id/edt_modul"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:gravity="center"
-            android:hint="modul"
-            android:textColor="@color/colorBlack"
-            android:textSize="@dimen/d_15">
-
-            <requestFocus />
-        </EditText>
-    </TableRow>
-
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="2dp" />
-
-    <TableRow
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/colorWhite">
-
-
-        <EditText
-            android:id="@+id/edt_supporter"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:gravity="center"
-            android:hint="supporter"
-            android:textColor="@color/colorBlack"
-            android:textSize="@dimen/d_15">
-
-            <requestFocus />
-        </EditText>
-    </TableRow>
-
-
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="1dp" />
-
-
-    <TableRow
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="right"
-        android:layout_marginTop="@dimen/d_10">
+        android:layout_centerInParent="true"
+        android:layout_gravity="center"
+        android:background="@color/colortvLogo1"
+        android:orientation="vertical"
+        android:padding="@dimen/d_16">
 
         <TextView
-            android:id="@+id/tv_cancel_more_class_004"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Cancel"
+            android:text="More Class"
             android:textColor="@color/colorBlack"
-            android:textSize="@dimen/d_25" />
+            android:textSize="@dimen/d_30"
+            android:textStyle="bold" />
 
-        <TextView
-            android:id="@+id/tv_ok_more_class_004"
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/d_20"
+            android:background="@color/colorWhite">
+
+
+            <EditText
+                android:id="@+id/edt_className"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:hint="ClassName"
+                android:textColor="@color/colorBlack"
+                android:textSize="@dimen/d_15">
+
+                <requestFocus />
+            </EditText>
+        </TableRow>
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="2dp" />
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/colorWhite">
+
+            <EditText
+                android:id="@+id/edt_classCode"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:hint="ClassCode"
+                android:textColor="@color/colorBlack"
+                android:textSize="@dimen/d_15">
+
+                <requestFocus />
+            </EditText>
+        </TableRow>
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="2dp" />
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/colorWhite">
+
+
+            <EditText
+                android:id="@+id/edt_coach"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:hint="coach"
+                android:textColor="@color/colorBlack"
+                android:textSize="@dimen/d_15">
+
+                <requestFocus />
+            </EditText>
+        </TableRow>
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="2dp" />
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/colorWhite">
+
+            <EditText
+                android:id="@+id/edt_description"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:hint="description"
+                android:textColor="@color/colorBlack"
+                android:textSize="@dimen/d_15">
+
+                <requestFocus />
+            </EditText>
+        </TableRow>
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="2dp" />
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/colorWhite">
+
+
+            <EditText
+                android:id="@+id/edt_duration"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:hint="duration"
+                android:textColor="@color/colorBlack"
+                android:textSize="@dimen/d_15">
+
+                <requestFocus />
+            </EditText>
+        </TableRow>
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="2dp" />
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/colorWhite">
+
+            <EditText
+                android:id="@+id/edt_modul"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:hint="modul"
+                android:textColor="@color/colorBlack"
+                android:textSize="@dimen/d_15">
+
+                <requestFocus />
+            </EditText>
+        </TableRow>
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="2dp" />
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/colorWhite">
+
+
+            <EditText
+                android:id="@+id/edt_supporter"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:hint="supporter"
+                android:textColor="@color/colorBlack"
+                android:textSize="@dimen/d_15">
+
+                <requestFocus />
+            </EditText>
+        </TableRow>
+
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp" />
+
+
+        <TableRow
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/d_20"
-            android:layout_marginRight="@dimen/d_10"
-            android:text="OK"
-            android:textColor="@color/colorBlack"
-            android:textSize="@dimen/d_25" />
-    </TableRow>
+            android:layout_gravity="right"
+            android:layout_marginTop="@dimen/d_10">
 
-</LinearLayout>
+            <TextView
+                android:id="@+id/tv_cancel_more_class_004"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Cancel"
+                android:textColor="@color/colorBlack"
+                android:textSize="@dimen/d_25" />
+
+            <TextView
+                android:id="@+id/tv_ok_more_class_004"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="@dimen/d_20"
+                android:layout_marginRight="@dimen/d_10"
+                android:text="OK"
+                android:textColor="@color/colorBlack"
+                android:textSize="@dimen/d_25" />
+        </TableRow>
+
+    </LinearLayout>
+</RelativeLayout>
