--- a/app/src/main/res/layout/item_day.xml
+++ b/app/src/main/res/layout/item_day.xml
@@ -3,7 +3,12 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@color/colorBlack"
-    android:padding="1dp">
+    android:paddingBottom="0.1dp">
+
+    <View
+        android:layout_width="0.1dp"
+        android:layout_height="match_parent"
+        android:background="@color/colorBlack" />
 
     <TextView
         android:id="@+id/tv_day"
@@ -17,7 +22,7 @@
         android:textSize="@dimen/d_20" />
 
     <View
-        android:layout_width="1dp"
+        android:layout_width="0.1dp"
         android:layout_height="match_parent"
         android:background="@color/colorBlack" />
 
@@ -33,7 +38,7 @@
         android:textSize="@dimen/d_20" />
 
     <View
-        android:layout_width="1dp"
+        android:layout_width="0.1dp"
         android:layout_height="match_parent"
         android:background="@color/colorBlack" />
 
@@ -49,7 +54,7 @@
         android:textSize="@dimen/d_16" />
 
     <View
-        android:layout_width="1dp"
+        android:layout_width="0.1dp"
         android:layout_height="match_parent"
         android:background="@color/colorBlack" />
 
@@ -65,7 +70,7 @@
         android:textSize="@dimen/d_16" />
 
     <View
-        android:layout_width="1dp"
+        android:layout_width="0.1dp"
         android:layout_height="match_parent"
         android:background="@color/colorBlack" />
 
@@ -81,8 +86,28 @@
         android:textSize="@dimen/d_16" />
 
     <View
-        android:layout_width="1dp"
+        android:layout_width="0.1dp"
         android:layout_height="match_parent"
         android:background="@color/colorBlack" />
+
+    <ImageView
+
+
+        android:id="@+id/iv_edit"
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:layout_weight="1"
+        android:background="@color/colorWhite"
+        android:gravity="center"
+        android:src="@drawable/ic_pen"
+        android:text="ghi chú"
+        android:textSize="@dimen/d_16"
+        android:tint="@color/colortvLogo" />
+
+    <View
+        android:layout_width="0.1dp"
+        android:layout_height="match_parent"
+        android:background="@color/colorBlack" />
+
 
 </TableRow>
