--- a/app/src/main/res/layout/m005_timetable_class.xml
+++ b/app/src/main/res/layout/m005_timetable_class.xml
@@ -20,7 +20,7 @@
             android:layout_height="match_parent"
             android:background="@color/colorWhite"
             android:orientation="vertical"
-            android:weightSum="5">
+            android:weightSum="6">
 
 
             <ImageView
@@ -29,27 +29,31 @@
                 android:layout_gravity="center_horizontal"
                 android:layout_marginTop="@dimen/d_10"
                 android:src="@drawable/ic_logo_company" />
-<TableRow android:layout_width="match_parent"
-    android:layout_height="@dimen/d_50"
-    >
-    <ImageView android:layout_width="@dimen/d_50"
-        android:layout_height="match_parent"
-        android:src="@drawable/ic_class"
-        android:layout_marginLeft="@dimen/d_16"
-        android:padding="5dp"/>
 
-            <TextView
-                android:id="@+id/tv_class_name_005"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginLeft="@dimen/d_16"
-                android:text="class name"
-                android:textColor="@color/colorBlack"
-                android:textSize="@dimen/d_20"
-                android:textStyle="bold" />
+            <TableRow
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/d_50">
 
-</TableRow>
+                <ImageView
+                    android:layout_width="@dimen/d_50"
+                    android:layout_height="match_parent"
+                    android:layout_marginLeft="@dimen/d_16"
+                    android:padding="5dp"
+                    android:src="@drawable/ic_class" />
+
+                <TextView
+                    android:id="@+id/tv_class_name_005"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginLeft="@dimen/d_16"
+                    android:text="class name"
+                    android:textColor="@color/colorBlack"
+                    android:textSize="@dimen/d_20"
+                    android:textStyle="bold" />
+
+            </TableRow>
+
             <TableRow
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/d_50"
@@ -67,7 +71,7 @@
                     android:gravity="center"
                     android:text="Day"
                     android:textColor="@color/colorWhite"
-                    android:textSize="@dimen/d_25" />
+                    android:textSize="@dimen/d_16" />
 
                 <View
                     android:layout_width="1dp"
@@ -82,7 +86,7 @@
                     android:gravity="center"
                     android:text="hours"
                     android:textColor="@color/colorWhite"
-                    android:textSize="@dimen/d_20" />
+                    android:textSize="@dimen/d_16" />
 
                 <View
                     android:layout_width="1dp"
@@ -97,7 +101,7 @@
                     android:gravity="center"
                     android:text="detail"
                     android:textColor="@color/colorWhite"
-                    android:textSize="@dimen/d_20" />
+                    android:textSize="@dimen/d_16" />
 
                 <View
                     android:layout_width="1dp"
@@ -112,7 +116,7 @@
                     android:gravity="center"
                     android:text="coach"
                     android:textColor="@color/colorWhite"
-                    android:textSize="@dimen/d_20" />
+                    android:textSize="@dimen/d_15" />
 
                 <View
                     android:layout_width="1dp"
@@ -127,7 +131,22 @@
                     android:gravity="center"
                     android:text="Note"
                     android:textColor="@color/colorWhite"
-                    android:textSize="@dimen/d_20" />
+                    android:textSize="@dimen/d_16" />
+
+                <View
+                    android:layout_width="1dp"
+                    android:layout_height="match_parent"
+                    android:background="@color/colorBlack" />
+
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:background="@color/colortvLogo"
+                    android:gravity="center"
+                    android:text="edit"
+                    android:textColor="@color/colorWhite"
+                    android:textSize="@dimen/d_16" />
 
             </TableRow>
 
@@ -156,7 +175,7 @@
                 android:layout_marginTop="@dimen/d_10"
                 android:layout_marginRight="@dimen/d_16"
                 android:background="@drawable/bg_edit_bt"
-                android:text="Edit table"
+                android:text="More"
                 android:textColor="@color/colorWhite" />
 
         </LinearLayout>
