--- a/app/src/main/res/layout/m005_timetable_class.xml
+++ b/app/src/main/res/layout/m005_timetable_class.xml
@@ -168,7 +168,7 @@
             </ScrollView>
 
             <Button
-                android:id="@+id/bt_edit_table"
+                android:id="@+id/bt_more_table"
                 android:layout_width="100dp"
                 android:layout_height="@dimen/d_50"
                 android:layout_gravity="right"
